# websoc-lite

./: .env.example  .gitattributes  .gitignore  Dockerfile.panel  Dockerfile.scanner  README.md  docker-compose.full.yml  docker-compose.panel.yml  observability.pi.json  pyproject.toml  targets.txt
docker/: observability.docker.json  scanner-entrypoint.sh
panel/: app.py  docker_api.py
scanner/: __init__.py  __main__.py
scanner/cli/: main.py
scanner/core/: backpressure.py  baseline.py  correlation.py  diff.py  engine.py  event_bus.py  http.py  hypothesis.py  metrics.py  models.py  mutation.py  pipeline.py  risk.py  state_store.py  telemetry.py
scanner/core/events/: __init__.py  schema.py
scanner/crawler/: base.py  html.py  playwright_stub.py  seeder.py
scanner/examples/: __init__.py  soc_v2_correlation_demo.py
scanner/extensions/: README.md  __init__.py  base.py  latency_guard.py  sandbox.py
scanner/extensions/lab/: __init__.py  experiments.py  runner.py
scanner/plugins/: base.py  loader.py  manager.py  protocols.py  sandbox.py
scanner/plugins/analyzers/: reflection.py  response_diff.py  sandbox_example.py  simple_example.py
scanner/plugins/crawlers/: simple_extra_path.py
scanner/plugins/mutations/: __init__.py  extra_suffix.py
scanner/plugins/reporters/: simple_echo.py
scanner/reporting/: html.py  json.py
scanner/utils/: config.py  hashing.py  logger.py
scripts/: start-websoc.sh
tests/: test_pipeline.py
